--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="./media/amogus.png">
     <link href="//db.onlinewebfonts.com/c/2545d122b16126676225a5b52283ae23?family=VCR+OSD+Mono" rel="stylesheet" type="text/css"/>
     <title>Amogus</title>
-</head>
+    <meta name="description" content="Very sussy shit, wayyy too much suss">
+
 
 <body>
     <p class="paragraf1">Impostor</p>
